--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>My Project</title>
 </head>
 <body>
-  <header></header>
-  <main></main>
-  <footer></footer>
+  <header>Header</header>
+  <main>Main</main>
+  <footer>Footer</footer>
 </body>
 </html>
